kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    # Introduce the service to Istio.
    # Otherwise it is unknown to the Istio Ingressgateway and not
    # accesable via the ingress.
    networking.istio.io/exportTo: istio-ingressgateway
  labels:
    app: nextjs
    component: frontend
    release: stable
spec:
  selector:
    app: nextjs
    component: frontend
    release: stable
  ports:
    # Either name of the port is prefixed with the protocol or
    # appProtocol has to be set.
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
